@@ -74,6 +74,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::VersionFromMainModule" => 0,
     "Dist::Zilla::Role::BeforeBuild" => 0,
     "Dist::Zilla::Role::FileMunger" => 0,
+    "Dist::Zilla::Role::PluginBundle::Config::Slicer" => 0,
     "Dist::Zilla::Role::PluginBundle::Easy" => 0,
     "Dist::Zilla::Role::TextTemplate" => 0,
     "List::MoreUtils" => 0,
@@ -151,6 +152,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::VersionFromMainModule" => 0,
   "Dist::Zilla::Role::BeforeBuild" => 0,
   "Dist::Zilla::Role::FileMunger" => 0,
+  "Dist::Zilla::Role::PluginBundle::Config::Slicer" => 0,
   "Dist::Zilla::Role::PluginBundle::Easy" => 0,
   "Dist::Zilla::Role::TextTemplate" => 0,
   "List::MoreUtils" => 0,
