@@ -21,9 +21,6 @@ To use this PluginBundle, just add it to your dist.ini. You can provide the
 following options:
 
 - `set_script_shebang` - this indicates whether `SetScriptShebang` should be used or not
-- `skip_file` - passed through to the `Author::SKIRMESS::RepositoryBase` plugin
-- `stopwords` - passed through to the `Author::SKIRMESS::RepositoryBase` plugin
-- `travis_ci_ignore_perl` - passed through to the `Author::SKIRMESS::RepositoryBase` plugin
 
 # SUPPORT
 
