@@ -7,14 +7,14 @@ copyright_holder = Sven Kirmess
 
 [Bootstrap::lib]
 [@Author::SKIRMESS]
-stopwords = SKIRMESS
-stopwords = TravisCI
-stopwords = dist
-stopwords = perlcriticrc
-stopwords = perltidy
-stopwords = perltidyrc
-stopwords = travis
-travis_ci_ignore_perl = 5.8
+Author::SKIRMESS::RepositoryBase.stopwords[dist]            = dist
+Author::SKIRMESS::RepositoryBase.stopwords[perlcriticrc]    = perlcriticrc
+Author::SKIRMESS::RepositoryBase.stopwords[perltidy]        = perltidy
+Author::SKIRMESS::RepositoryBase.stopwords[perltidyrc]      = perltidyrc
+Author::SKIRMESS::RepositoryBase.stopwords[SKIRMESS]        = SKIRMESS
+Author::SKIRMESS::RepositoryBase.stopwords[travis]          = travis
+Author::SKIRMESS::RepositoryBase.stopwords[TravisCI]        = TravisCI
+Author::SKIRMESS::RepositoryBase.travis_ci_ignore_perl[5.8] = 5.8
 
 [Prereqs::Plugins]
 phase = runtime
