@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+  - Add the Dist::Zilla::Role::PluginBundle::Config::Slicer role
+
 0.019  2017-09-17 19:50:55 UTC
 
   - Added new option 'skip_file' which can be used to skip the creation of
